Added Overlay + Changed nav bar from fixed
Added overlay in front of the gif to reduce brightness and to enhance readability on the words

Nav bar does not follow screen now

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <!-- Featured Image-->
     <div class="featured-item">
-      <div class="featured-gif">
-      </div>
+      <div class="featured-gif"></div>
+      <div class="overlay"></div>
     </div>
 
     <div class="headline">
