--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     <div class="featured-item">
       <div class="featured-gif"></div>
       <div class="overlay"></div>
+      <div class="featured-item-details">
+        <img src="image/phone.png">
+        <h2>Available Now</h2>
+        <input type="button" value="Buy Now">
+      </div>
     </div>
 
     <div class="headline">
