changed heading, logo resize

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Index</title>
+  <title>Contact</title>
   <head>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="js\index.js"></script>
@@ -23,6 +23,26 @@
             </a>
         </nav>
     </header>
+
+    <div style="height:100px; width:100%;"></div>
+
+    <section class="contact-section">
+        <form>
+            <h1>Contact Us</h1>
+            <div class="input-per-line">
+                <input type="text" placeholder="First Name">
+                <input type="text" placeholder="Last Name">
+            </div>
+            <div class="input-per-line">
+                <input type="text" placeholder="Phone">
+                <input type="text" placeholder="Email">
+            </div>
+            <textarea rows="4" cols="50"></textarea>
+        </form>
+        <aside>
+
+        </aside>
+    </section>
 
     <footer>
         <div class="footerInner">
