--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body onload = "Load()">
     <header>
   			<a href="#" class="logo">
-  		   <img src="image/logo.png" height="100%" alt="Logo">
+  		   <img src="image/logo.png" alt="Logo">
   			</a>
         <nav>
           <a href="#" class="active">Home</a>
