changed products page + others

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     			<a href="testimonies.html">Testimonies</a>
     			<a href="products.html">Products</a>
     			<a href="contact.html">Contact</a>
-          <a href='promotions.html'>Promotion</a>
+          <a href="promotions.html">Promotion</a>
           <a href="cart.html">
             <p id="cartQuantity"></p>
             <img src="image/cartFillEmpty.png" height="30px" alt ="cart">
@@ -28,11 +28,6 @@
     <div class="featured-item">
       <div class="featured-gif"></div>
       <div class="overlay"></div>
-      <div class="featured-item-details">
-        <img src="image/phone.png">
-        <h2>Available Now</h2>
-        <input type="button" value="Buy Now">
-      </div>
     </div>
 
     <div class="headline">
