worked on contact page

--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,6 @@
           <a href="index.html">Home</a>
             <a href="products.html">Products</a>
             <a href="#" class="active">Contact</a>
-            <a href='promotions.html'>Promotion</a>
-            <a href="#">
-                <p id="cartQuantity"></p>
-                <img src="image/cartFillEmpty.png" height="30px" alt ="cart">
-            </a>
         </nav>
     </header>
 
@@ -44,6 +39,30 @@
 
             <input type="button" value="Send feedback">
         </form>
+        <div class="contact-information">
+            <h1>Contact Information</h1>
+            
+            <div class="contact-details">
+                <img src="image/location.png">
+                <p>Location information</p>
+            </div>
+
+            <div class="contact-details">
+                <img src="image/mail.png">
+                <p>contact@gmail.com</p>
+            </div>
+
+            <div class="contact-details">
+                <img src="image/call.png">
+                <p>+65 phone number</p>
+            </div>
+
+            <div class="contact-details-images">
+                <a><img src="image/twitter.png"></a>
+                <a><img src="image/instagram.png"></a>
+                <a><img src="image/facebook.png"></a>
+            </div>
+        </div>
     </section>
 
     <footer>
