Added content to Index
Added images and description to fill the index
Contact page updated

--- a/contact.html
+++ b/contact.html
@@ -21,48 +21,62 @@
     <div style="height:75px; background-color:black;"></div>
 
     <section class="contact-section">
+
+        <div class="contact-information">
+            <div class="contact-details">
+                <div style="display:flex;">
+                    <img src="image/location.png">
+                    <p>Address</p>
+                </div>
+                <div class="contact-details-information">
+                    Address details
+                </div>
+            </div>
+
+            <div class="contact-details">
+                <div style="display:flex;">
+                    <img src="image/call.png">
+                    <p>Phone</p>
+                </div>
+                <div>
+                    Phone details
+                </div>
+            </div>
+
+            <div class="contact-details">
+                <div style="display:flex;">
+                    <img src="image/mail.png">
+                    <p>Email</p>
+                </div>
+                <div>
+                    Email details
+                </div>
+            </div>
+        </div>
+
         <form class="contact-form">
-            <h1>Contact Us</h1>
+            <h1>Send us a message</h1>
             <p>
                 Got a question? 
                 We'd love to hear from you.
                 Send us a message and we'll respond as soon as possible.
             </p>
-            <h2>Name</h2>
-            <input type="text" placeholder="Enter Name">
+            <h2>Enter your name</h2>
+            <div style="display:flex;">
+                <input type="text" placeholder="First Name">
+                <input type="text" placeholder="Last Name">
+            </div>
 
-            <h2>Email Address</h2>
+            <h2>Enter your email address</h2>
             <input type="text" placeholder="Enter email address">
 
-            <h2>Message</h2>
+            <h2>Enter your message</h2>
             <textarea rows="4" placeholder="Enter message here"></textarea>
 
             <input type="button" value="Send feedback">
         </form>
-        <div class="contact-information">
-            <h1>Contact Information</h1>
-            
-            <div class="contact-details">
-                <img src="image/location.png">
-                <p>Location information</p>
-            </div>
 
-            <div class="contact-details">
-                <img src="image/mail.png">
-                <p>contact@gmail.com</p>
-            </div>
-
-            <div class="contact-details">
-                <img src="image/call.png">
-                <p>+65 phone number</p>
-            </div>
-
-            <div class="contact-details-images">
-                <a><img src="image/twitter.png"></a>
-                <a><img src="image/instagram.png"></a>
-                <a><img src="image/facebook.png"></a>
-            </div>
-        </div>
+        
     </section>
 
     <footer>
