--- a/index.html
+++ b/index.html
@@ -30,24 +30,22 @@
     
     <section class="product-section">
       <div class="text-section">
-        <h1>Lorem ipsum dolor sit amet</h1>
-        <p>
-          Lorem ipsum dolor sit amet,
-          consectetur adipiscing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident,
-          sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <h1>Razer Blade 14" (RZ09-01953F52-R3F1)</h1>
+        <p>Display : 14" IPS Full HD Matte, 16:9 Ratio, 1920 x 1080 & 14" 4K UHD, 16:9 Ratio, 3840 x 2160,capacitive multi-touch</p>
+        <p>Graphics : NVIDIA® GeForce® GTX 1060 (6GB GDDR5 VRAM)</p>
+        <p>Processor : Intel® Core™ i7-7700HQ Quad-Core Processor with Hyper-Threading 2.8GHz / 3.8GHz (Base/Turbo)</p>
+        <p>Chipset : Mobile Intel® PCHM 100-series chipset, HM175</p>
+        <p>Storage : 256GB SSD (PCIe M.2) / 512GB SSD (PCIe M.2) / 1TB SSD (PCIe M.2) 512GB SSD (PCIe M.2) / 1TB SSD (PCIe M.2)</p>
+        <p>Memory : 16GB dual-channel onboard memory (DDR4, 2400MHz)</p>
+        <p>Operating Systems : Windows 10 (64-Bit)</p>
+        <p>Communication : Killer™ Wireless-AC 1535 (802.11a/b/g/n/ac + Bluetooth® 4.1)</p>
       </div>
       <div class="image-section">
-        <img src="image/phone.png" alt="phone" width="100%" id="selected-image">
+        <img src="image/razer.png" alt="razer" id="selected-image">
         <div class="image-preview">
-          <img src="image/logo.png" alt="phone" onclick="imageChange('image/logo.png')">
-          <img src="image/phone.png" alt="phone" onclick="imageChange('image/phone.png')">
-          <img src="image/phone.png" alt="phone" onclick="imageChange('image/phone.png')">
+          <img src="image/razer.png" alt="razer" onclick="imageChange('image/razer.png')">
+          <img src="image/razer_2.png" alt="razer2" onclick="imageChange('image/razer_2.png')">
+          <img src="image/razer_3.png" alt="razer3" onclick="imageChange('image/razer_3.png')">
         </div>
       </div>
     </section>
@@ -59,26 +57,34 @@
 
     <section class="category-selection">
       <div class="category">
-        <h1>Phones</h1>
-        <img src="image/phone.png" alt="phone">
+        <h1>Laptops</h1>
+        <div class="category-image-container">
+          <img src="image/laptop_icon.png" alt="laptop">
+        </div>
         <input type="button" value="Shop Now">
       </div>
 
       <div class="category">
-        <h1>Phone</h1>
-        <img src="image/phone.png" alt="phone">
+        <h1>Desktops</h1>
+        <div class="category-image-container">
+          <img src="image/desktop_icon.png" alt="desktop">
+        </div>
         <input type="button" value="Shop Now">
       </div>
 
       <div class="category">
-        <h1>Phone</h1>
-        <img src="image/phone.png" alt="phone">
+        <h1>Smartphones</h1>
+        <div class="category-image-container">
+          <img src="image/smartphone_icon.png" alt="smartphone">
+        </div>
         <input type="button" value="Shop Now">
       </div>
 
       <div class="category">
-        <h1>Phone</h1>
-        <img src="image/phone.png" alt="phone">
+        <h1>Accessories</h1>
+        <div class="category-image-container">
+          <img src="image/accessories_icon.png" alt="accessories">
+        </div>
         <input type="button" value="Shop Now">
       </div>
     </section>
@@ -89,35 +95,45 @@
 
     <section class="testimonies">
       <div class="testimony">
-        <img src="image/phone.png">
+        <div class="testimony-image-container">
+          <img src="image/testimony1.png">
+        </div>
         <h1>Name</h1>
         <h2>Job</h2>
         <p>Description</p>
       </div>
 
       <div class="testimony">
-        <img src="image/phone.png">
+        <div class="testimony-image-container">
+          <img src="image/testimony2.png">
+        </div>
         <h1>Name</h1>
         <h2>Job</h2>
         <p>Description</p>
       </div>
 
       <div class="testimony">
-        <img src="image/phone.png">
+        <div class="testimony-image-container">
+          <img src="image/phone.png">
+        </div>
         <h1>Name</h1>
         <h2>Job</h2>
         <p>Description</p>
       </div>
 
       <div class="testimony">
-        <img src="image/phone.png">
+        <div class="testimony-image-container">
+          <img src="image/phone.png">
+        </div>
         <h1>Name</h1>
         <h2>Job</h2>
         <p>Description</p>
       </div>
 
       <div class="testimony">
-        <img src="image/phone.png">
+        <div class="testimony-image-container">
+          <img src="image/phone.png">
+        </div>
         <h1>Name</h1>
         <h2>Job</h2>
         <p>Description</p>
