--- a/contact.html
+++ b/contact.html
@@ -7,78 +7,76 @@
     <script type="text/javascript" src="js\index.js"></script>
   </head>
   <body>
-    <header>
-        <a href="#" class="logo">
-            <img src="image/logo.png" height="100%" alt="Logo">
-        </a>
-        <nav>
-          <a href="index.html">Home</a>
-            <a href="products.html">Products</a>
-            <a href="#" class="active">Contact</a>
-        </nav>
-    </header>
+    <div class="contact-background">
+        <header>
+            <a href="#" class="logo">
+                <img src="image/logo.png" height="100%" alt="Logo">
+            </a>
+            <nav>
+            <a href="index.html">Home</a>
+                <a href="products.html">Products</a>
+                <a href="#" class="active">Contact</a>
+            </nav>
+        </header>
+        <div style="height:75px;"></div>
 
-    <div style="height:75px; background-color:black;"></div>
+        <section class="contact-section">
 
-    <section class="contact-section">
+            <div class="contact-information">
+                <div class="contact-details">
+                    <div style="display:flex;">
+                        <img src="image/location.png">
+                        <p>Address</p>
+                    </div>
+                    <div class="contact-details-information">
+                        Address details
+                    </div>
+                </div>
 
-        <div class="contact-information">
-            <div class="contact-details">
+                <div class="contact-details">
+                    <div style="display:flex;">
+                        <img src="image/call.png">
+                        <p>Phone</p>
+                    </div>
+                    <div>
+                        Phone details
+                    </div>
+                </div>
+
+                <div class="contact-details">
+                    <div style="display:flex;">
+                        <img src="image/mail.png">
+                        <p>Email</p>
+                    </div>
+                    <div>
+                        Email details
+                    </div>
+                </div>
+            </div>
+
+            <form class="contact-form">
+                <h1>Send us a message</h1>
+                <p>
+                    Got a question? 
+                    We'd love to hear from you.
+                    Send us a message and we'll respond as soon as possible.
+                </p>
+                <h2>Enter your name</h2>
                 <div style="display:flex;">
-                    <img src="image/location.png">
-                    <p>Address</p>
+                    <input type="text" placeholder="First Name">
+                    <input type="text" placeholder="Last Name">
                 </div>
-                <div class="contact-details-information">
-                    Address details
-                </div>
-            </div>
 
-            <div class="contact-details">
-                <div style="display:flex;">
-                    <img src="image/call.png">
-                    <p>Phone</p>
-                </div>
-                <div>
-                    Phone details
-                </div>
-            </div>
+                <h2>Enter your email address</h2>
+                <input type="text" placeholder="Enter email address">
 
-            <div class="contact-details">
-                <div style="display:flex;">
-                    <img src="image/mail.png">
-                    <p>Email</p>
-                </div>
-                <div>
-                    Email details
-                </div>
-            </div>
-        </div>
+                <h2>Enter your message</h2>
+                <textarea rows="4" placeholder="Enter message here"></textarea>
 
-        <form class="contact-form">
-            <h1>Send us a message</h1>
-            <p>
-                Got a question? 
-                We'd love to hear from you.
-                Send us a message and we'll respond as soon as possible.
-            </p>
-            <h2>Enter your name</h2>
-            <div style="display:flex;">
-                <input type="text" placeholder="First Name">
-                <input type="text" placeholder="Last Name">
-            </div>
-
-            <h2>Enter your email address</h2>
-            <input type="text" placeholder="Enter email address">
-
-            <h2>Enter your message</h2>
-            <textarea rows="4" placeholder="Enter message here"></textarea>
-
-            <input type="button" value="Send feedback">
-        </form>
-
-        
-    </section>
-
+                <input type="button" value="Send feedback">
+            </form>     
+        </section>
+    </div>
     <footer>
         <div class="footerInner">
             <div class="footerLeft">
