changed location of styles, added assets + credits for pages + added responsive design for mobile

--- a/contact.html
+++ b/contact.html
@@ -1,96 +1,96 @@
 <!doctype html>
 <html>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="image/logo.svg">
   <title>Contact</title>
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js\index.js"></script>
   </head>
   <body>
-    <div class="contact-background">
-        <header>
-            <a href="#" class="logo">
-                <img src="image/logo.png" height="100%" alt="Logo">
-            </a>
-            <nav>
-            <a href="index.html">Home</a>
-                <a href="products.html">Products</a>
-                <a href="#" class="active">Contact</a>
-            </nav>
-        </header>
-        <div style="height:75px;"></div>
+    <header>
+        <a href="#" class="logo">
+            <img src="image/logo.svg" height="100%" alt="Logo">
+        </a>
+        <nav>
+        <a href="index.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="#" class="active">Contact</a>
+        </nav>
+    </header>
+    <div class="contact-page"></div>
 
-        <section class="contact-section">
+    <section class="contact-section">
 
-            <div class="contact-information">
-                <div class="contact-details">
-                    <div style="display:flex;">
-                        <img src="image/location.png">
-                        <p>Address</p>
-                    </div>
-                    <div class="contact-details-information">
-                        Address details
-                    </div>
-                </div>
-
-                <div class="contact-details">
-                    <div style="display:flex;">
-                        <img src="image/call.png">
-                        <p>Phone</p>
-                    </div>
-                    <div>
-                        Phone details
-                    </div>
-                </div>
-
-                <div class="contact-details">
-                    <div style="display:flex;">
-                        <img src="image/mail.png">
-                        <p>Email</p>
-                    </div>
-                    <div>
-                        Email details
-                    </div>
-                </div>
-            </div>
-
-            <form class="contact-form">
-                <h1>Send us a message</h1>
-                <p>
-                    Got a question? 
-                    We'd love to hear from you.
-                    Send us a message and we'll respond as soon as possible.
-                </p>
-                <h2>Enter your name</h2>
+        <div class="contact-information">
+            <div class="contact-details">
                 <div style="display:flex;">
-                    <input type="text" placeholder="First Name">
-                    <input type="text" placeholder="Last Name">
+                    <img src="image/location.png">
+                    <p>Address</p>
                 </div>
-
-                <h2>Enter your email address</h2>
-                <input type="text" placeholder="Enter email address">
-
-                <h2>Enter your message</h2>
-                <textarea rows="4" placeholder="Enter message here"></textarea>
-
-                <input type="button" value="Send feedback">
-            </form>     
-        </section>
-    </div>
-    <footer>
-        <div class="footerInner">
-            <div class="footerLeft">
-                <a href="">
-                    <p>Terms Of Use</p>
-                </a>
-                <a href="">
-                    <p>lol</p>
-                </a>
+                <div class="contact-details-information">
+                    Address details
+                </div>
             </div>
-            <div class="footerRight">
-                <p>&copy; Copyright lololol</p>
+
+            <div class="contact-details">
+                <div style="display:flex;">
+                    <img src="image/call.png">
+                    <p>Phone</p>
+                </div>
+                <div>
+                    Phone details
+                </div>
+            </div>
+
+            <div class="contact-details">
+                <div style="display:flex;">
+                    <img src="image/mail.png">
+                    <p>Email</p>
+                </div>
+                <div>
+                    Email details
+                </div>
             </div>
         </div>
-    </footer>
+
+        <form class="contact-form">
+            <h1>Send us a message</h1>
+            <p>
+                Got a question? 
+                We'd love to hear from you.
+                Send us a message and we'll respond as soon as possible.
+            </p>
+            <h2>Enter your name</h2>
+            <div style="display:flex;">
+                <input type="text" placeholder="First Name">
+                <input type="text" placeholder="Last Name">
+            </div>
+
+            <h2>Enter your email address</h2>
+            <input type="text" placeholder="Enter email address">
+
+            <h2>Enter your message</h2>
+            <textarea rows="4" placeholder="Enter message here"></textarea>
+
+            <input type="button" value="Send feedback">
+        </form>     
+    </section>
+
+        <footer>
+            <div class="footerInner">
+                <div class="footerLeft">
+                    <a href="">
+                        <p>Terms Of Use</p>
+                    </a>
+                    <a href="">
+                        <p>lol</p>
+                    </a>
+                </div>
+                <div class="footerRight">
+                    <p>&copy; Copyright lololol</p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
