--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="image/logo.svg">
   <title>Index</title>
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js\index.js"></script>
   </head>
   <body onload = "Load()">
     <header>
   			<a href="#" class="logo">
-  		   <img src="image/logo.png" alt="Logo">
+  		   <img src="image/logo.svg" alt="Logo">
   			</a>
         <nav>
           <a href="#" class="active">Home</a>
@@ -61,7 +62,7 @@
         <div class="category-image-container">
           <img src="image/laptop_icon.png" alt="laptop">
         </div>
-        <input type="button" value="Shop Now">
+        <input type="button" value="Shop Now" onClick="location.href='products.html'" >
       </div>
 
       <div class="category">
@@ -69,7 +70,7 @@
         <div class="category-image-container">
           <img src="image/desktop_icon.png" alt="desktop">
         </div>
-        <input type="button" value="Shop Now">
+        <input type="button" value="Shop Now" onClick="location.href='products.html'">
       </div>
 
       <div class="category">
@@ -77,7 +78,7 @@
         <div class="category-image-container">
           <img src="image/smartphone_icon.png" alt="smartphone">
         </div>
-        <input type="button" value="Shop Now">
+        <input type="button" value="Shop Now" onClick="location.href='products.html'">
       </div>
 
       <div class="category">
@@ -85,7 +86,7 @@
         <div class="category-image-container">
           <img src="image/accessories_icon.png" alt="accessories">
         </div>
-        <input type="button" value="Shop Now">
+        <input type="button" value="Shop Now" onClick="location.href='products.html'">
       </div>
     </section>
 
@@ -98,45 +99,48 @@
         <div class="testimony-image-container">
           <img src="image/testimony1.png">
         </div>
-        <h1>Name</h1>
-        <h2>Job</h2>
-        <p>Description</p>
+        <h1>Engineer</h1>
+        <h2>Engineer</h2>
+        <p>
+          "The devices provided from this website has never failed me once"
+          -engineer 
+        </p>
       </div>
 
       <div class="testimony">
         <div class="testimony-image-container">
           <img src="image/testimony2.png">
         </div>
-        <h1>Name</h1>
-        <h2>Job</h2>
-        <p>Description</p>
+        <h1>Sans undertale</h1>
+        <h2>sans</h2>
+        <p>Website is easy to use and read</p>
       </div>
 
       <div class="testimony">
         <div class="testimony-image-container">
-          <img src="image/phone.png">
+          <img src="image/testimony3.jpg">
         </div>
-        <h1>Name</h1>
-        <h2>Job</h2>
-        <p>Description</p>
+        <h1>Human name</h1>
+        <h2>Working job</h2>
+        <p>Works great! saves me alot of time searching for a gadget that i need</p>
       </div>
 
       <div class="testimony">
         <div class="testimony-image-container">
-          <img src="image/phone.png">
+          <img src="image/testimony3.jpg">
         </div>
         <h1>Name</h1>
         <h2>Job</h2>
-        <p>Description</p>
+        <p>Works great!</p>
       </div>
 
       <div class="testimony">
         <div class="testimony-image-container">
-          <img src="image/phone.png">
+          <img src="image/testimony3.jpg">
         </div>
         <h1>Name</h1>
         <h2>Job</h2>
-        <p>Description</p>
+        <p>Works great!</p>
       </div>
     </section>
 
