--- a/products.html
+++ b/products.html
@@ -1,24 +1,25 @@
 <!doctype html>
 <html>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="image/logo.svg">
   <title>Index</title>
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js\index.js"></script>
   </head>
   <body>
     <header>
         <a href="#" class="logo">
-            <img src="image/logo.png" height="100%" alt="Logo">
+            <img src="image/logo.svg" height="100%" alt="Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="products.html"  class="active">Products</a>
+            <a href="products.html">Products</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
 
-    <div style="height:75px; background-color:black;"></div>
+    <div class="product-page"></div>
     
     <div class="whitespace">
         <div style="width:100%; text-align:center;">
