validation for html + css

--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,17 @@
 <!doctype html>
-<html>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="image/logo.svg">
-  <title>Contact</title>
+<html lang ="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="image/logo.svg">
+    <title>Contact</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="js\index.js"></script>
+    <script src="js/index.js"></script>
   </head>
   <body>
     <header>
         <a href="#" class="logo">
-            <img src="image/logo.svg" height="100%" alt="Logo">
+            <img src="image/logo.svg" alt="Logo">
         </a>
         <nav>
         <a href="index.html">Home</a>
@@ -25,31 +26,32 @@
         <div class="contact-information">
             <div class="contact-details">
                 <div style="display:flex;">
-                    <img src="image/location.png">
+                    <img src="image/location.png" alt="location">
                     <p>Address</p>
                 </div>
                 <div class="contact-details-information">
-                    Address details
+                    664A Jurong West Street 64
+                    Jurong West Street 64, 641664, Boon Lay
                 </div>
             </div>
 
             <div class="contact-details">
                 <div style="display:flex;">
-                    <img src="image/call.png">
+                    <img src="image/call.png" alt="call">
                     <p>Phone</p>
                 </div>
                 <div>
-                    Phone details
+                    +65 9818 0163
                 </div>
             </div>
 
             <div class="contact-details">
                 <div style="display:flex;">
-                    <img src="image/mail.png">
+                    <img src="image/mail.png" alt="mail">
                     <p>Email</p>
                 </div>
                 <div>
-                    Email details
+                    deongoh.255@gmail.com
                 </div>
             </div>
         </div>
