--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="image/logo.svg">
-  <title>Index</title>
+<html lang ="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="image/logo.svg">
+    <title>Index</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="js\index.js"></script>
+    <script src="js/index.js"></script>
   </head>
   <body onload = "Load()">
     <header>
@@ -31,7 +32,7 @@
     
     <section class="product-section">
       <div class="text-section">
-        <h1>Razer Blade 14" (RZ09-01953F52-R3F1)</h1>
+        <h2>Razer Blade 14" (RZ09-01953F52-R3F1)</h2>
         <p>Display : 14" IPS Full HD Matte, 16:9 Ratio, 1920 x 1080 & 14" 4K UHD, 16:9 Ratio, 3840 x 2160,capacitive multi-touch</p>
         <p>Graphics : NVIDIA® GeForce® GTX 1060 (6GB GDDR5 VRAM)</p>
         <p>Processor : Intel® Core™ i7-7700HQ Quad-Core Processor with Hyper-Threading 2.8GHz / 3.8GHz (Base/Turbo)</p>
@@ -58,7 +59,7 @@
 
     <section class="category-selection">
       <div class="category">
-        <h1>Laptops</h1>
+        <h2>Laptops</h2>
         <div class="category-image-container">
           <img src="image/laptop_icon.png" alt="laptop">
         </div>
@@ -66,7 +67,7 @@
       </div>
 
       <div class="category">
-        <h1>Desktops</h1>
+        <h2>Desktops</h2>
         <div class="category-image-container">
           <img src="image/desktop_icon.png" alt="desktop">
         </div>
@@ -74,7 +75,7 @@
       </div>
 
       <div class="category">
-        <h1>Smartphones</h1>
+        <h2>Smartphones</h2>
         <div class="category-image-container">
           <img src="image/smartphone_icon.png" alt="smartphone">
         </div>
@@ -82,7 +83,7 @@
       </div>
 
       <div class="category">
-        <h1>Accessories</h1>
+        <h2>Accessories</h2>
         <div class="category-image-container">
           <img src="image/accessories_icon.png" alt="accessories">
         </div>
@@ -97,10 +98,10 @@
     <section class="testimonies">
       <div class="testimony">
         <div class="testimony-image-container">
-          <img src="image/testimony1.png">
+          <img src="image/testimony1.png" alt="testimony1">
         </div>
-        <h1>Engineer</h1>
         <h2>Engineer</h2>
+        <h3>Engineer</h3>
         <p>
           "The devices provided from this website has never failed me once"
           -engineer 
@@ -109,37 +110,37 @@
 
       <div class="testimony">
         <div class="testimony-image-container">
-          <img src="image/testimony2.png">
+          <img src="image/testimony2.png" alt="testimony2">
         </div>
-        <h1>Sans undertale</h1>
-        <h2>sans</h2>
+        <h2>Sans undertale</h2>
+        <h3>sans</h3>
         <p>Website is easy to use and read</p>
       </div>
 
       <div class="testimony">
         <div class="testimony-image-container">
-          <img src="image/testimony3.jpg">
+          <img src="image/testimony3.jpg" alt="testimony3">
         </div>
-        <h1>Human name</h1>
-        <h2>Working job</h2>
+        <h2>Human name</h2>
+        <h3>Working job</h3>
         <p>Works great! saves me alot of time searching for a gadget that i need</p>
       </div>
 
       <div class="testimony">
         <div class="testimony-image-container">
-          <img src="image/testimony3.jpg">
+          <img src="image/testimony3.jpg" alt="testimony4">
         </div>
-        <h1>Name</h1>
-        <h2>Job</h2>
+        <h2>Name</h2>
+        <h3>Job</h3>
         <p>Works great!</p>
       </div>
 
       <div class="testimony">
         <div class="testimony-image-container">
-          <img src="image/testimony3.jpg">
+          <img src="image/testimony3.jpg" alt="testimony5">
         </div>
-        <h1>Name</h1>
-        <h2>Job</h2>
+        <h2>Name</h2>
+        <h3>Job</h3>
         <p>Works great!</p>
       </div>
     </section>
