--- a/products.html
+++ b/products.html
@@ -15,8 +15,8 @@
         </a>
         <nav>
         <a href="index.html">Home</a>
-            <a href="products.html">Products</a>
-            <a href="#" class="active">Contact</a>
+            <a href="#">Products</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
