--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
             <img src="image/logo.svg" alt="Logo">
         </a>
         <nav>
-        <a href="index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="products.html">Products</a>
-            <a href="#" class="active">Contact</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
     <div class="contact-page"></div>
