--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   		   <img src="image/logo.svg" alt="Logo">
   			</a>
         <nav>
-          <a href="#" class="active">Home</a>
+          <a href="#">Home</a>
     			<a href="products.html">Products</a>
     			<a href="contact.html">Contact</a>
     		</nav>
